@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2004/09/10 17:10:24 uebayasi Exp $
+# $NetBSD: Makefile,v 1.13 2004/09/12 02:37:25 uebayasi Exp $
 
 DISTNAME=	semi-1.14.6
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.m17n.org/pub/mule/semi/semi-1.14-for-flim-1.14/
 
@@ -8,9 +9,9 @@ MAINTAINER=	tech-pkg-ja@jp.NetBSD.org
 HOMEPAGE=	http://www.m17n.org/SEMI/
 COMMENT=	Emacs lisp library to provide MIME feature
 
-DEPENDS+=	${PKGNAME_PREFIX}apel>=10.3:../../devel/apel
-DEPENDS+=	${PKGNAME_PREFIX}flim>=1.6:../../devel/flim
-#BUILD_DEPENDS+=	${PKGNAME_PREFIX}w3-*:../../www/w3
+DEPENDS+=	${PKGNAME_PREFIX}apel>=9.22:../../devel/apel # See ${WRKSRC}/README.en
+DEPENDS+=	${PKGNAME_PREFIX}flim>=1.14.2:../../devel/flim # See ${WRKSRC}/README.en
+BUILD_DEPENDS+=	${PKGNAME_PREFIX}w3-*:../../www/w3
 BUILD_DEPENDS+=	${PKGNAME_PREFIX}bbdb-*:../../misc/bbdb
 BUILD_DEPENDS+=	qkc-*:../../converters/qkc
 
