@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7141 2004/09/11 20:16:32 wiz Exp $
+$NetBSD: CHANGES,v 1.7142 2004/09/12 02:37:24 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4238,3 +4238,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed cmdline [jmmv 2004-09-11]
 	Updated libnbcompat to 20040911 [jlam 2004-09-11]
 	Updated madman to 0.93nb1 [wiz 2004-09-11]
+	Updated semi to 1.14.6nb1 [uebayasi 2004-09-11]
